<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@drawable/baseline_arrow_back_24"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:text="@string/printer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.fluid.markdown.demos.PrinterActivity">

        <Button
            android:id="@+id/clear"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circle"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/editorContainer"
            app:layout_constraintEnd_toEndOf="@+id/editorContainer" />

        <ScrollView
            android:id="@+id/editorContainer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="12dp"
            android:background="@drawable/editor_bg"
            android:clipToPadding="false"
            android:gravity="start|top"
            android:padding="12dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000"
                android:gravity="start|top"
                android:hint="@string/input_markdown_text"
                android:minHeight="126dp"
                android:textColorHint="#bbb"
                android:textSize="15sp" />
        </ScrollView>

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="#1677FF"
            android:gravity="center"
            android:minWidth="70dp"
            android:padding="12dp"
            android:text="@string/start"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editorContainer"
            app:layout_constraintEnd_toStartOf="@+id/stop"/>
        <TextView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1677FF"
            android:gravity="center"
            android:minWidth="70dp"
            android:padding="12dp"
            android:text="@string/stop"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/start"
            app:layout_constraintEnd_toStartOf="@+id/append"
            app:layout_constraintTop_toTopOf="@+id/start" />


        <TextView
            android:id="@+id/append"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1677FF"
            android:padding="12dp"
            android:text="@string/appendText"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/appendSwitch"
            app:layout_constraintStart_toEndOf="@+id/stop"
            app:layout_constraintTop_toTopOf="@+id/start" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/appendSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/append"
            app:layout_constraintBottom_toBottomOf="@+id/stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/append"
            app:layout_constraintTop_toTopOf="@+id/append" />

        <TextView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1677FF"
            android:padding="12dp"
            android:minWidth="70dp"
            android:gravity="center"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@id/start" />

        <TextView
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1677FF"
            android:gravity="center"
            android:minWidth="70dp"
            android:padding="12dp"
            android:text="@string/resume"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/stop"
            app:layout_constraintTop_toTopOf="@id/pause" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="12dp"
        android:stackFromBottom="true" />
</LinearLayout>